@@ -1,7 +1,6 @@
 package com.ds.microservices.sport.tabletennis.util;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -25,8 +24,10 @@ import com.ds.microservices.sport.tabletennis.entity.GameSetId;
 import com.ds.microservices.sport.tabletennis.entity.Group;
 import com.ds.microservices.sport.tabletennis.entity.Player;
 import com.ds.microservices.sport.tabletennis.exceptions.CompetitionAlreadyCompletedException;
-import com.ds.microservices.sport.tabletennis.exceptions.CompetitionDoesNotExistException;
+import com.ds.microservices.sport.tabletennis.exceptions.CompetitionNotCompletedException;
 import com.ds.microservices.sport.tabletennis.exceptions.CompetitionNotCorrectNumberOfPlayersException;
+import com.ds.microservices.sport.tabletennis.exceptions.CompetitionNotFoundException;
+import com.ds.microservices.sport.tabletennis.exceptions.GamesNotGeneratedException;
 
 @Component
 public class CompetitionUtil {
@@ -45,89 +46,46 @@ public class CompetitionUtil {
 		createCompetitionPlayersMap(competition);
 	}
 	
-	// Check if competition has all elements for generating games (players, seeds...)
-	public boolean setupCompleted(Competition competition) {
-		
-		boolean setupCompleted = true;
-
-		// Check number of players
-		if (!competitionConfiguration.isAutogeneratePlayers()) {
-			setupCompleted = ((competition.getCompetitionPlayers() == null) ? 0 : competition.getCompetitionPlayers().size()) == competitionConfiguration.getNumberOfPlayers();
-			if (!setupCompleted) throw new CompetitionNotCorrectNumberOfPlayersException();
-		}
-		
-		// Check number of seeds - 8
-		//		completed = (competition.getPlayers().size() == Long.parseLong(map.get("NUMBER_OF_SEEDS").getValue()))
-
-		// Check number of games - 0
-		setupCompleted = competition.getGames() != null && competition.getGames().size() > 0 ? true : false;
-		if (!setupCompleted) throw new CompetitionNotCorrectNumberOfPlayersException();
-
-	
-		logger.info("Setup completed " + setupCompleted);
-		return setupCompleted;
-	}
-
 	public List<Group> createGroups(Competition competition, List<Player> candidates) {
-		logger.info("createGroups START");
-		
 		int numberOfSeeds = competitionConfiguration.getNumberOfSeeds();
 		int numberOfPlayers = competitionConfiguration.getNumberOfPlayers();
 		int numberOfGroups = numberOfPlayers / numberOfSeeds ;
-		List<Group> groups = new ArrayList<Group>();
+		List<Group> groups = new ArrayList<>();
 
+		// we are able to add players to competition manually, the rest of them well be added automaticaly
 		int addedPlayers = CollectionUtils.isEmpty(competition.getCompetitionPlayers()) ? 0 : competition.getCompetitionPlayers().size();
+		// number of players needed for competition (read from configuration)  
 		int totalPlayers = competitionConfiguration.getNumberOfPlayers();
+		// we will add as many players as needed to reach totalPlayers  
 		int missingPlayers = totalPlayers - addedPlayers;
 		
-		logger.info("missingPlayers " + missingPlayers);
-		
 		// Add players to competition according to their points (first 'number_of_players')
-		boolean noMorePlayers = false;
-		if(missingPlayers > 0 || noMorePlayers) {
-			if (competitionConfiguration.isAutogeneratePlayers()) {
-				for (Player player : candidates) {
-					if (player.isActive() && missingPlayers > 0) {
-						if (!this.getCompetitionPlayerMap().containsKey(new CompetitionPlayerPK(competition, player))) {
-							CompetitionPlayer competitionPlayer = new CompetitionPlayer();
-							CompetitionPlayerPK pk = new CompetitionPlayerPK(competition, player);
-							competitionPlayer.setId(pk);
-							
-							this.getCompetitionPlayerMap().put(competitionPlayer.getId(), competitionPlayer);
-							competition.getCompetitionPlayers().add(competitionPlayer);
-							missingPlayers--;
-							logger.log(Level.INFO, "missingPlayers changed {0}. Added {1}", new Object[]{missingPlayers, player.getPoints()});
-						}
-					}
+		// Configuration parameter 'autogeneratePlayers=true' allowing us to automatically add players to competition
+		// Add active players to CompetitionPlayer list until missing players is 0
+		if (missingPlayers > 0 && competitionConfiguration.isAutogeneratePlayers()) {
+			for (Player player : candidates) {
+				if ((player.isActive() && missingPlayers > 0) && !this.getCompetitionPlayerMap().containsKey(new CompetitionPlayerPK(competition, player))) {
+					CompetitionPlayer competitionPlayer = new CompetitionPlayer();
+					CompetitionPlayerPK pk = new CompetitionPlayerPK(competition, player);
+					competitionPlayer.setId(pk);
+					
+					this.getCompetitionPlayerMap().put(competitionPlayer.getId(), competitionPlayer);
+					competition.getCompetitionPlayers().add(competitionPlayer);
+					missingPlayers--;
+					logger.log(Level.INFO, "missingPlayers changed {0}. Added {1}", new Object[]{missingPlayers, player.getPoints()});
 				}
-				noMorePlayers = true;
 			}
 		}
 		
-		logger.log(Level.INFO, "NUMBER_OF_PLAYERS after {0}", competition.getCompetitionPlayers().size());
-		
-		competition.getCompetitionPlayers().forEach(competitionPlayer ->
-			logger.info("CompetitionPlayer " + competitionPlayer.getId().getPlayer())
-		);
-
-		// Create players pools 
-		logger.info("numberOfGroups " + numberOfGroups);
-//		List<Group> drawingGroups = new ArrayList<Group>(); 
-//		for (int i = 1; i <= number_of_groups; i++) {
-//			Group group = new Group();
-//			drawingGroups.add(group);
-//		}
-		
 		// Add seed players
+		// Players are sorted by rating points. 
+		// Add first 'numberOfSeeds'(8 by default) players each of them to next group 
 		List<CompetitionPlayer> sortedPlayers = competition.getCompetitionPlayers();
-		logger.info("sortedPlayers " + sortedPlayers.size());
-		logger.info("numberOfSeeds " + numberOfSeeds);
+		// Groups are named 'A'-'H' (8 groups by default)
 		char groupName = 'A';
 		for (int i = 1; i <= numberOfSeeds; i++) {
 			Group group = new Group();
-			Long groupId = new Long(i);
-
-			List<Player> groupPlayers = new ArrayList<Player>();
+			List<Player> groupPlayers = new ArrayList<>();
 			CompetitionPlayer competitionPlayer = sortedPlayers.get(i-1);
 			competitionPlayer.setSeed(true);
 			competitionPlayer.setActive(true);
@@ -140,37 +98,34 @@ public class CompetitionUtil {
 			
 			groups.add(group);
 		}
-		
-		// Show seed players
-		for (Group group : groups) {
-			logger.info("group " + group);
-		}
 
+		
 		// Draw
-		int draw_start = 1;
-		int draw_end = 1;
+		// Add other members of the groups.
+		// Members are divided by ration points to 3 groups (seeds are already added to groups)
+		int drawStart = 1;
+		int drawEnd = 1;
 		
 		// number_of_groups 0-2
 		// indexes: 0-7 (seeds, already covered), 8-15, 16-23, 24-31
 		// number_to_draw = 8
 		for (int i = 0; i < numberOfGroups-1; i++) {
 			int numberToDraw = numberOfSeeds;
-			ArrayList<Long> indexes = new ArrayList<Long>(); 
-			draw_start = (numberOfSeeds * (i+1));
-			draw_end = (numberOfSeeds * (i+2))-1;
-			logger.info("draw (" + draw_start + " : " + draw_end + ")");
-			for (int j = draw_start; j <= draw_end; j++) {
-				indexes.add(new Long(j));
+			ArrayList<Long> indexes = new ArrayList<>(); 
+			drawStart = (numberOfSeeds * (i+1));
+			drawEnd = (numberOfSeeds * (i+2))-1;
+			// indexes as array
+			// by default we are choosing 3 groups of players
+			// so values for 'indexes' will be as above: [8..15], [16..23], [24..31]
+			for (int j = drawStart; j <= drawEnd; j++) {
+				indexes.add(Long.valueOf(j));
 			}
-			logger.info("indexes " + indexes);
 			
 			// number_of_seeds 0-7
 			for (int j = 0; j < numberOfSeeds; j++) {
-				logger.info("indexes at work " + indexes);
 				int randomIndex = ThreadLocalRandom.current().nextInt(0, numberToDraw);
-				logger.info("randomIndex " + randomIndex);
+				// Draw random player index (0-7), add player with that index to group and then remove that index from 'indexes' array
 				CompetitionPlayer drawPlayer = sortedPlayers.get(indexes.get(randomIndex).intValue());
-//				drawPlayer.setGroup(groups.get(number_to_draw-1));
 				drawPlayer.setActive(true);
 				groups.get(numberToDraw-1).getPlayers().add(drawPlayer.getId().getPlayer());
 				indexes.remove(randomIndex);
@@ -179,23 +134,26 @@ public class CompetitionUtil {
 			
 		}
 		
-		// Checking group coef (balance of power of the groups)
+		checkBalanceOfPower(groups);
+		return groups;
+	}
+
+	// Checking group coef (balance of power: proportion between max and min sum of players points)
+	// If it is too high, groups are not balanced. 
+	// At this moment, there will be only one line in log to show balance
+	// For future use: possible usage is after competition generation, so you may cancel it if balance is too high (not balanced groups)
+	public void checkBalanceOfPower(List<Group> groups) {
 		float minPoints = 9999;
 		float maxPoints = 0;
 		for (Group group : groups) {
 			if(minPoints > group.groupPoints()) minPoints =  group.groupPoints();
 			if(maxPoints < group.groupPoints()) maxPoints =  group.groupPoints();
-			logger.info("group " + group);
 		}
-		logger.info("group coef " + (maxPoints / minPoints));
-
-
-		logger.info("createGroups END");
-		return groups;
+		logger.log(Level.INFO, "group coef {0}", (maxPoints / minPoints));
 	}
-
+	
 	public List<Game> createGames(Competition competition) {
-		List<Game> games = new ArrayList<Game>();
+		List<Game> games = new ArrayList<>();
 		
 		for (int i = 0; i < competition.getGroups().size(); i++) {
 			games.addAll(generateGamesForGroup(competition, competition.getGroups().get(i)));
@@ -206,43 +164,51 @@ public class CompetitionUtil {
 	}
 	
 	
-	// Round robin tournament games. Check if this may be double round robin.
+	// Round robin tournament games. Check later if this may be double round robin.
 	public List<Game> generateGamesForGroup(Competition competition, Group group) {
 		logger.info("generateGamesForGroup START");
 		
-		List<Game> games = new ArrayList<Game>();
+		List<Game> games = new ArrayList<>();
 
-		int number_of_players = group.getPlayers().size();
-		// if we have odd number of players, we'll add 1 (bye)
-		if (number_of_players % 2 == 1) {
-			number_of_players++;
+		int numberOfPlayers = group.getPlayers().size();
+		// if we have odd number of players, we'll add 1 ('BYE': when you are paired with BYE, you'll have pause in that round)
+		if (numberOfPlayers % 2 == 1) {
+			numberOfPlayers++;
 		}
-		int number_of_rounds = number_of_players - 1;
-		int number_of_games = number_of_players * number_of_rounds;
+		int numberOfRounds = numberOfPlayers - 1;
 
-		logger.info("number_of_players " + number_of_players);
-		logger.info("number_of_rounds " + number_of_rounds);
-		logger.info("number_of_games " + number_of_games);
+/* 
+ *    Small modification of Berger system to generate all games for group of players
+ *    Default example: we divide list of group players in two lists. First player from first list is fixed, he will not change position. 
+ *    In default case: [0,1], [3,2]. Pairs that make games are determined by index: (0, 3), (1, 2)
+ *    Then, we'll transform initial lists.
+ *     TRANSFORMATION first list: first player for second list -> second player in first list (other members of first list shifts to the right).
+ *    TRANSFORMATION second list: last one from first list -> last one in second list (other members of second list shifts to the left)
+ *    Example with 14 players is more descriptive:
+ *     First list: { 1,  2,  3,  4,  5,  6,  7} 
+ *    Second list: {14, 13, 12, 11, 10,  9,  8} 
+ *    Games are (1, 14), (2, 13) and so on... 
+ *    After first transformation: 
+ *     First list: { 1, 14,  2,  3,  4,  5,  6} 
+ *    Second list: {13, 12, 11, 10,  9,  8,  7} 
+ *    Games are (1, 13), (14, 12) and so on...		 
+ */
 
-		ArrayList<Player> first = new ArrayList<Player>();
-		ArrayList<Player> second = new ArrayList<Player>();
+		List<Player> first = new ArrayList<>();
+		List<Player> second = new ArrayList<>();
 
-		for (int i = 0; i < number_of_players; i++) {
-			if (i < number_of_players / 2) {
+		for (int i = 0; i < numberOfPlayers; i++) {
+			if (i < numberOfPlayers / 2) {
 				first.add(group.getPlayers().get(i));
 			} else {
 				second.add(0, group.getPlayers().get(i));
 			}
 		}
-
-		for (int round = 1; round <= number_of_rounds; round++) {
-			// Round x
-			System.out.println("Before " + round + ": first " + first);
-			System.out.println("Before " + round + ": second" + second);
-			System.out.println("Round " + round);
-			for (int i = 0; i < number_of_players/2; i++) {
-				logger.info("" + first.get(i) + " : " + second.get(i));
-
+		logger.log(Level.INFO, " First initial {0}", first);
+		logger.log(Level.INFO, "Second initial {0}", second);
+		
+		for (int round = 1; round <= numberOfRounds; round++) {
+			for (int i = 0; i < numberOfPlayers/2; i++) {
 				Game game = new Game();
 				game.setPlayerHome(first.get(i));
 				game.setPlayerAway(second.get(i));
@@ -255,25 +221,18 @@ public class CompetitionUtil {
 	
 			// first arrays transformation
 			// remove elements
-			Player move_first = first.get(first.size()-1);
+			Player moveFirst = first.get(first.size()-1);
 			first.remove(first.size()-1);
-			Player move_second = second.get(0);
+			Player moveSecond = second.get(0);
 			second.remove(0);
 			// add elements
-			first.add(1, move_second);
-			second.add(move_first);
+			first.add(1, moveSecond);
+			second.add(moveFirst);
 
+			logger.log(Level.INFO, " First after round {0}: {1}", new Object[]{round, first});
+			logger.log(Level.INFO, "Second after round {0}: {1}", new Object[]{round, second});
 		}
 
-		
-		for (Game game : games) {
-			logger.info("Game : " + game);
-		}
-		
-		
-		
-		
-		
 		logger.info("generateGamesForGroup END");
 		return games;
 	}
@@ -281,215 +240,128 @@ public class CompetitionUtil {
 	public void generateSecondPart(Competition competition) {
 		logger.info("competition-util generateSecondPart() ");
 
-		logger.info("GROUPS  " + competition.getGroups().size());
-		logger.info("PLAYERS " + competition.getCompetitionPlayers().size());
-		logger.info("GAMES   " + competition.getGames().size());
-		
 		// temporary, for testing
 		generateResults(competition);
-//		groupSort(competition);
 	}
 
-//	public void groupSort(Competition competition) {
-//		logger.info("groupSort  ");
-//		List<Group> groups = competition.getGroups();
-//		for (Group group : groups) {
-//			logger.info("group  " + group);
-//		}
-//
-//	}
-	
-
-	
 	public void generateResults(Competition competition) {
-		logger.info("GAMES   " + competition.getGames().size());
-		
-		for (Game game : competition.getGames()) {
-//			if (game.getGroupId() == 98) {
-				generateGameResult(game);
-//			}
-		}
+		competition.getGames().forEach(this::generateGameResult);
 	}
 	
-	public void generateGameResult(Game game) {
-		Player home = game.getPlayerHome();
-		Player away = game.getPlayerAway();
-		
-		logger.info("Home " + home.getFirstName() + " " + home.getLastName() + "(" + home.getPoints() + ")");
-		logger.info("Away " + away.getFirstName() + " " + away.getLastName() + "(" + away.getPoints() + ")");
-		
-		int hPoints = home.getPoints().intValue();
-		int aPoints = away.getPoints().intValue();
-		
-		int number_to_draw = hPoints + aPoints;
-		int randomIndex = ThreadLocalRandom.current().nextInt(0, number_to_draw);
-		logger.info("randomIndex " + randomIndex);
-		
-		int set_points_home[] = new int[5];
-		int set_points_away[] = new int[5];
-		int sets_home = 0;
-		int sets_away = 0;
-		for (int i = 0; i < 5 && sets_home < 3  && sets_away < 3; i++) {
-			int random_home = ThreadLocalRandom.current().nextInt(0, 11);
-			int random_away = ThreadLocalRandom.current().nextInt(0, 11);
-			if(random_home > random_away) {
-				sets_home++;
-				if(11 > random_away + 2) {
-					set_points_home[i] = 11;
-					set_points_away[i] = random_away;
-				} else {
-					set_points_home[i] = random_away + 2;
-					set_points_away[i] = random_away;
-				}
-			} else {
-				sets_away++;
-				if(11 > random_home + 2) {
-					set_points_home[i] = random_home;
-					set_points_away[i] = 11;
-				} else {
-					set_points_home[i] = random_home;
-					set_points_away[i] = random_home + 2;
-				}
-			}
-		}
-
-		game.setPointsHome(sets_home);
-		game.setPointsAway(sets_away);
-		
-		List<GameSet> sets = new ArrayList<GameSet>();
-		game.setSets(sets);
-		for (int i = 0; i < set_points_away.length; i++) {
-			if (!(set_points_home[i] == 0 && set_points_away[i] == 0)) {
-				GameSet gameSet = new GameSet();
-				GameSetId gameSetId = new GameSetId();
-				gameSetId.setSetNo(new Long(i+1));
-				gameSetId.setGame(game);
-				gameSet.setId(gameSetId);
-				gameSet.setPointsHome(set_points_home[i]);
-				gameSet.setPointsAway(set_points_away[i]);
-				sets.add(gameSet);
-			}
-		}
-
-		logger.info("Sets home 1: " + Arrays.toString(set_points_home) );
-		logger.info("Sets away 1: " + Arrays.toString(set_points_away) );
-
-		if (game.getPointsAway() > game.getPointsHome()) {
-			logger.info("Game away win: " + away.getFirstName() + " " + away.getLastName() + " won " + game.getPointsHome() + " : " + game.getPointsAway() );
-		} else {
-			logger.info("Game home win: " + home.getFirstName() + " " + home.getLastName() + " won " + game.getPointsHome() + " : " + game.getPointsAway() );
-		}
-
-	}
-
+	
 	
 	// Check if competition has all elements for generating games (players, seeds...)
-	public boolean generateCheck(Optional<Competition> competition) {
+	public boolean checkIfCompetitionGenerateIsAllowed(Optional<Competition> competition) {
 		
 		checkIfEmpty(competition);
-		
-		checkIfInProgress(competition);
 		
 		checkIfCompleted(competition);
 		
 		checkNumberOfPlayers(competition.get().getCompetitionPlayers());
 		
+		checkNumberOfGames(competition.get().getGames());
+		
 		return true;
 	}
 	
+	// If competiton not found 
 	private void checkIfEmpty(Optional<Competition> competition) {
-		
-		if (!competition.isPresent() || competition.get().getId() == null) {
-			 throw new CompetitionDoesNotExistException();
-		}
-
+		if (!competition.isPresent() ) throw new CompetitionNotFoundException();
 	}
 
-	private void checkIfInProgress(Optional<Competition> competition) {
-
-		if (!competition.get().isCurrent() || competition.get().isCompleted()) {
-			 throw new CompetitionAlreadyCompletedException();
-		}
-
-	}
-	
+	// If competiton is completed
 	private void checkIfCompleted(Optional<Competition> competition) {
-
-		if (competition.get().isCompleted()) {
-			 throw new CompetitionAlreadyCompletedException();
-		}
-
+		if (competition.isPresent() && competition.get().isCompleted()) throw new CompetitionAlreadyCompletedException();
 	}
 	
+	// If number of players in competiton is not correct (different from value in configuration: NUMBER_OF_PLAYERS)
 	private void checkNumberOfPlayers(List<CompetitionPlayer> competitionPlayers) {
-
-		// Check number of players
-		if (!competitionConfiguration.isAutogeneratePlayers()) {
-			if(competitionPlayers == null || competitionPlayers.size() != competitionConfiguration.getNumberOfPlayers()) {
+		if (!competitionConfiguration.isAutogeneratePlayers() 
+			&& (competitionPlayers == null || (competitionPlayers.size() != competitionConfiguration.getNumberOfPlayers()) ) 
+		) {
 				throw new CompetitionNotCorrectNumberOfPlayersException();
-			}
 		}
-
 	}
+	
+	// If already exists games in competiton
+	private void checkNumberOfGames(List<Game> games) {
+		if(games != null && !games.isEmpty()) throw new CompetitionNotCompletedException();
+	}
+
 	
 	// Check if competition has all elements for generating games (players, seeds...)
-	public boolean activateCheck(Competition competition) {
+	public boolean checkIfCompetitionActivationIsAllowed(Optional<Competition> competition) {
 		
-//		boolean setupCompleted = false;
+		checkIfEmpty(competition);
 		
-		// Check number of players
-		boolean setupCompleted = ((competition.getCompetitionPlayers() == null) ? 0 : competition.getCompetitionPlayers().size()) == competitionConfiguration.getNumberOfPlayers();
-		if (!setupCompleted) throw new CompetitionNotCorrectNumberOfPlayersException();
+		checkIfCompleted(competition);
 		
-		// Check number of seeds - 8
-		//		completed = (competition.getPlayers().size() == Long.parseLong(map.get("NUMBER_OF_SEEDS").getValue()))
-
-		// Check number of games - 0
-		setupCompleted = competition.getGames() != null && competition.getGames().size() > 0 ? true : false;
-		if (!setupCompleted) throw new CompetitionNotCorrectNumberOfPlayersException();
-
+		checkNumberOfPlayers(competition.get().getCompetitionPlayers());
+		
+		checkIfGamesExist(competition.get().getGames());
+		
+		return true;
+	}
 	
-		logger.log(Level.INFO, "Setup completed {0}", setupCompleted);
-		return setupCompleted;
+	// If already exists games in competiton
+	private void checkIfGamesExist(List<Game> games) {
+		if(games == null || games.isEmpty()) throw new GamesNotGeneratedException();
 	}
 
-	public static void main(String[] args) {
-
-		int rounds = 5;
-		int number_of_players = 6;
+	// For testing: delete in final version
+	public void generateGameResult(Game game) {
+		Player home = game.getPlayerHome();
+		Player away = game.getPlayerAway();
 		
-		ArrayList<Integer> first = new ArrayList<Integer>();
-		ArrayList<Integer> second = new ArrayList<Integer>();
-
-		for (int i = 1; i <= number_of_players; i++) {
-			if (i <= number_of_players / 2) {
-				first.add(new Integer(i));
+		int[] setPointsHome = new int[5];
+		int[] setPointsAway = new int[5];
+		int setsHome = 0;
+		int setsAway = 0;
+		for (int i = 0; i < 5 && setsHome < 3  && setsAway < 3; i++) {
+			int randomHome = ThreadLocalRandom.current().nextInt(0, 11);
+			int randomAway = ThreadLocalRandom.current().nextInt(0, 11);
+			if(randomHome > randomAway) {
+				setsHome++;
+				if(11 > randomAway + 2) {
+					setPointsHome[i] = 11;
+					setPointsAway[i] = randomAway;
+				} else {
+					setPointsHome[i] = randomAway + 2;
+					setPointsAway[i] = randomAway;
+				}
 			} else {
-				second.add(0, new Integer(i));
+				setsAway++;
+				if(11 > randomHome + 2) {
+					setPointsHome[i] = randomHome;
+					setPointsAway[i] = 11;
+				} else {
+					setPointsHome[i] = randomHome;
+					setPointsAway[i] = randomHome + 2;
+				}
 			}
 		}
 
-		for (int x = 1; x <= rounds; x++) {
-			// Round x
-			System.out.println("Before " + x + ": " + first + ", " + second);
-			System.out.println("Round " + x);
-			for (int i = 0; i < number_of_players/2; i++) {
-				System.out.println("" + first.get(i) + " : " + second.get(i));
+		game.setPointsHome(setsHome);
+		game.setPointsAway(setsAway);
+		
+		List<GameSet> sets = new ArrayList<>();
+		game.setSets(sets);
+		for (int i = 0; i < setPointsAway.length; i++) {
+			if (!(setPointsHome[i] == 0 && setPointsAway[i] == 0)) {
+				GameSet gameSet = new GameSet();
+				GameSetId gameSetId = new GameSetId();
+				gameSetId.setSetNo(Long.valueOf(i+1));
+				gameSetId.setGame(game);
+				gameSet.setId(gameSetId);
+				gameSet.setPointsHome(setPointsHome[i]);
+				gameSet.setPointsAway(setPointsAway[i]);
+				sets.add(gameSet);
 			}
-	
-			// first arrays transformation
-			// remove elements
-			Integer move_first = first.get(first.size()-1);
-			first.remove(first.size()-1);
-			Integer move_second = second.get(0);
-			second.remove(0);
-			// add elements
-			first.add(1, move_second);
-			second.add(move_first);
-
 		}
+
 	}
 
+	
 	public Map<CompetitionPlayerPK, CompetitionPlayer> getCompetitionPlayerMap() {
 		return competitionPlayerMap;
 	}
@@ -507,5 +379,6 @@ public class CompetitionUtil {
 		}
 		return competitionPlayerMap;
 	}
+
 
 }
